--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WZ94M5X');</script>
+    <!-- End Google Tag Manager -->    
     <title>ahaNAIL</title>
     
     <meta charset="utf-8">
@@ -29,7 +36,10 @@
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>       
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-  
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WZ94M5X"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->  
   <div class="site-wrap"  id="home-section">
 
     <div class="site-mobile-menu site-navbar-target">
@@ -230,7 +240,7 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" id="submit_button" value="Send Message" class="btn btn-primary mr-2 mb-2">
+                  <input type="submit" id="submit_button" value="Gửi" class="btn btn-primary mr-2 mb-2">
                 </div>
               </div>
 
