--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@
 
   
             </form>
+            <div class="modal fade bd-example-modal-sm" id="thank-you" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title">Xin Cám ơn</h5>
+                  </div>                  
+                </div>
+              </div>
+            </div>            
           </div>
         
         </div>
