--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
           <div class="col-md-12" style="position: relative;" data-aos="fade-up">
             
-            <img src="images/landing_1.png" alt="Image" class="img-fluid img-absolute">
+            <img src="images/landing_2.png" alt="Image" class="img-fluid img-absolute">
 
             <div class="row mb-4">
               <div class="col-lg-5 mr-auto">
@@ -196,7 +196,10 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h5 class="section-title mb-3">Nếu Anh/Chị muốn dùng thử miễn phí, hay Anh/Chị thấy có chức năng nào cần thiết hơn, xin vui lòng góp ý hoặc để lại thông tin liên hệ. Nhóm Vũ sẽ rất trân trọng và sẽ hậu ta sau khi sản phẩm hoàn thiện.</h5>
+            <h2 class="section-title mb-3">Dùng Thử Miễn Phí</h2>
+          </div>          
+          <div class="col-12 text-center">
+            <h4>Nếu Anh/Chị muốn dùng thử miễn phí, hay góp ý về chức năng của App, xin vui lòng góp ý hoặc để lại thông tin liên hệ. Nhóm Vũ sẽ rất trân trọng và sẽ hậu ta sau khi sản phẩm hoàn thiện.</h4>
           </div>
         </div>
         <div class="row justify-content-center">
