--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                   <input type="submit" id="submit_button" value="Gửi" class="btn btn-primary mr-2 mb-2">
                 </div>
                 <script type="text/javascript">
-                document.getElementById('contactButton').addEventListener('click', function() {
+                document.getElementById('submit_button').addEventListener('click', function() {
                   fbq('track', 'Contact');
                 }, false);
                 </script>                
