--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       src="https://www.facebook.com/tr?id=2394527057306652&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->    
-    <title>ahaNAIL</title>
+    <title>ahaNAIL - Quản Lý Tiệm Nail Nhanh và Hiệu Quả</title>
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
